// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio[Base] should render correctly  1`] = `
<div
  class="clnvxwm soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="chxtlw1 soui-radio-indicator-wrapper"
  >
    <span
      class="c-4u63tq soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c6yu2se soui-radio-desc"
  >
    Option
  </span>
</div>
`;

exports[`Radio[Base] should render correctly about block 1`] = `
<div
  class="c2yfuoi soui-radio-group"
>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper c-863kv soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about button 1`] = `
<div
  class="c2yfuoi soui-radio-group c-5smtjw soui-radio-group-button c-g2kyu9 soui-button-group"
  dir="ltr"
>
  <button
    class="clnvxwm soui-radio-wrapper c-pzb818 soui-button-secondary c-3br65q soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="clnvxwm soui-radio-wrapper c-pzb818 soui-button-secondary c-3br65q soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="clnvxwm soui-radio-wrapper c-863kv soui-radio-wrapper-checked ctqq9eq soui-button-primary c-3br65q soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="clnvxwm soui-radio-wrapper c-pzb818 soui-button-secondary c-3br65q soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="clnvxwm soui-radio-wrapper c-pzb818 soui-button-secondary c-3br65q soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="clnvxwm soui-radio-wrapper c-pzb818 soui-button-secondary c-3br65q soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="clnvxwm soui-radio-wrapper c-pzb818 soui-button-secondary c-3br65q soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about button outline 1`] = `
<div
  class="c2yfuoi soui-radio-group c-5smtjw soui-radio-group-button c-g2kyu9 soui-button-group"
  dir="ltr"
>
  <button
    class="clnvxwm soui-radio-wrapper c-pzb818 soui-button-secondary c-3br65q soui-button-button cgni3qa soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="clnvxwm soui-radio-wrapper c-pzb818 soui-button-secondary c-3br65q soui-button-button cgni3qa soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="clnvxwm soui-radio-wrapper c-863kv soui-radio-wrapper-checked ctqq9eq soui-button-primary c-3br65q soui-button-button cgni3qa soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="clnvxwm soui-radio-wrapper c-pzb818 soui-button-secondary c-3br65q soui-button-button cgni3qa soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="clnvxwm soui-radio-wrapper c-pzb818 soui-button-secondary c-3br65q soui-button-button cgni3qa soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="clnvxwm soui-radio-wrapper c-pzb818 soui-button-secondary c-3br65q soui-button-button cgni3qa soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="clnvxwm soui-radio-wrapper c-pzb818 soui-button-secondary c-3br65q soui-button-button cgni3qa soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about cancel 1`] = `
<div
  class="c2yfuoi soui-radio-group"
>
  <div
    class="clnvxwm soui-radio-wrapper c-863kv soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled 1`] = `
<div
  class="c2yfuoi soui-radio-group"
>
  <div
    class="clnvxwm soui-radio-wrapper c-ryyuwu soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper c-ryyuwu soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper c-ryyuwu soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper c-ryyuwu soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper c-ryyuwu soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper c-ryyuwu soui-radio-wrapper-disabled c-863kv soui-radio-wrapper-checked"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper c-ryyuwu soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled func 1`] = `
<div
  class="c2yfuoi soui-radio-group"
>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper c-ryyuwu soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper c-863kv soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group 1`] = `
<div
  class="c2yfuoi soui-radio-group"
>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper c-863kv soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group children 1`] = `
<div
  class="c2yfuoi soui-radio-group"
>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper c-863kv soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="clnvxwm soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chxtlw1 soui-radio-indicator-wrapper"
    >
      <span
        class="c-4u63tq soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c6yu2se soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c2yfuoi soui-radio-group c-5smtjw soui-radio-group-button c-g2kyu9 soui-button-group"
    dir="ltr"
  >
    <button
      class="clnvxwm soui-radio-wrapper c-863kv soui-radio-wrapper-checked ctqq9eq soui-button-primary c-3br65q soui-button-button c-fw2x95 soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="clnvxwm soui-radio-wrapper c-pzb818 soui-button-secondary c-3br65q soui-button-button c-fw2x95 soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="clnvxwm soui-radio-wrapper c-pzb818 soui-button-secondary c-3br65q soui-button-button c-fw2x95 soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="c2yfuoi soui-radio-group c-5smtjw soui-radio-group-button c-g2kyu9 soui-button-group"
    dir="ltr"
    style="margin-top: 24px;"
  >
    <button
      class="clnvxwm soui-radio-wrapper c-863kv soui-radio-wrapper-checked ctqq9eq soui-button-primary c-3br65q soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="clnvxwm soui-radio-wrapper c-pzb818 soui-button-secondary c-3br65q soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="clnvxwm soui-radio-wrapper c-pzb818 soui-button-secondary c-3br65q soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="c2yfuoi soui-radio-group c-5smtjw soui-radio-group-button c-g2kyu9 soui-button-group"
    dir="ltr"
    style="margin-top: 24px;"
  >
    <button
      class="clnvxwm soui-radio-wrapper c-863kv soui-radio-wrapper-checked ctqq9eq soui-button-primary c-3br65q soui-button-button c-g04srp soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="clnvxwm soui-radio-wrapper c-pzb818 soui-button-secondary c-3br65q soui-button-button c-g04srp soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="clnvxwm soui-radio-wrapper c-pzb818 soui-button-secondary c-3br65q soui-button-button c-g04srp soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
</div>
`;

exports[`Radio[Base] should render correctly about status 1`] = `
<div
  class="clnvxwm soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="chxtlw1 soui-radio-indicator-wrapper"
  >
    <span
      class="c-4u63tq soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c6yu2se soui-radio-desc"
  >
    OptionA
  </span>
</div>
`;
